<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iDerly</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
     
    <string name="title_activity_actionbar_title">Title Activity Action Bar</string>
    <string name="title_activity_add_elder_form">AddElderFormActivity</string>
    <string name="title_activity_caregiver_home">CaregiverHomeActivity</string>
    <string name="title_activity_edit_elder_profile">EditElderProfileActivity</string>
    <string name="title_activity_elder_details">ElderDetailsActivity</string>
    <string name="title_activity_elder_photo_gallery_details">ElderPhotoGalleryDetailsActivity</string>
    <string name="title_activity_elder_profile_detail">ElderProfileDetailActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_game_round">GameRoundActivity</string>
    <string name="title_activity_game_end">GameEndActivity</string>
    <string name="title_activity_login_caregiver">LoginCaregiverActivity</string>
    <string name="title_activity_register_caregiver">RegisterCaregiverActivity</string>
    <string name="ActionBar_LoginCaregiver_Text">Login as Caregiver</string>
    <string name="elder_details_actionbar_title">Add Photo</string>
    
    <string name="ButtonText_Login">Login</string>
    <string name="ButtonText_Register">Register</string>
    <string name="ButtonText_ForgotPassword">Forgot Password</string>
    <string name="Button_ForgetPassword">Submit</string>
    <string name="Button_AddElder_Label">Add Elder</string>
    
    <string name="Label_ForgetPasswordInstruction">Please enter your e-mail address</string>
    <string name="LabelText_Email">E-Mail</string>
    <string name="LabelText_Name">Full Name</string>
    <string name="LabelText_Password">Password</string>
    <string name="LabelText_PasswordConfirm">Confirm Password</string> 
    <string name="RegisterBtn_LabelText">Register</string>
    
    
    <string name="Label_Elder_UserId">edocsss</string>
    <string name="Label_ElderName">Kenrick</string>
    
    <string name="LabelText_ElderName">Elder\'s Name</string>
    <string name="LabelText_ElderDeviceId">Elder\'s Device ID</string>
    <string name="AddElderBtn_LabelText">Add Elder</string>
    <string name="Label_ElderProfilePicture">Profile Picture</string>
    <string name="ElderProfilePictureDescription">Elder\'s Profile Picture</string>
    <string name="ButtonText_ElderProfilePicture">Select Picture</string>
    <string name="Label_PhotoRemarks">Remarks</string>
    <string name="TEST_PhotoRemarks">Remarks 1 2 3</string>
    <string name="Label_ElderProfile_DeviceId">Device ID</string>
    <string name="Text_ElderProfile_DeviceId">B123567</string>
    <string name="Label_ElderProfile_Name">Name</string>
    <string name="Text_ElderProfile_Name">Kenrick Anggara</string>
    <string name="Label_ElderProfile_Email">Email</string>
    <string name="Text_ElderProfile_Email">kenrick95@gmail.com</string>
    <string name="Label_ElderProfile_AverageScore">Average Score</string>
    <string name="Label_ElderProfile_AverageScoreClassic">Average Score (Classic)</string>
    <string name="Label_ElderProfile_AverageScoreUnlimited">Average Score (Unlimited)</string>
    <string name="Label_ElderProfile_HighScore">High Score</string>
    <string name="Label_ElderProfile_HighScoreClassic">High Score (Classic)</string>
    <string name="Label_ElderProfile_HighScoreUnlimited">High Score (Unlimited)</string>
    <string name="Label_ElderProfile_LastPlayed">Last Played</string>
    <string name="Label_ElderProfile_LastPlayedClassic">Last Played (Classic)</string>
    <string name="Label_ElderProfile_LastPlayedUnlimited">Last Played (Unlimited)</string>
    <string name="Text_ElderProfile_AverageScore">95.5</string>
    <string name="Label_ElderProfile_ProfilePicture">Picture</string>
    <string name="Text_ElderProfile_EditButton">Edit Profile</string>

    <string name="PlayGame_ButtonText">Play Game!</string>
    <string name="GameMode_Classic_ButtonText">Mode: Classic</string>
    <string name="GameMode_Unlimited_ButtonText">Mode: Unlimited</string>
    <string name="GameRound_PictureText">Who is this?</string>
    <string name="GameRound_PictureCorrectText">Correct!</string>
    <string name="GameRound_PictureWrongText">Wrong Answer...</string>
    <string name="GameRound_CongratulationText">Congratulations!</string>
    <string name="GameRound_ScoreText">You Scored:</string>
    <string name="GameRound_ReturnText">Press anywhere to return to main menu</string>
    <string name="GameRound_ContinueText">Press anywhere to continue</string>
    <string name="GameRound_NextText">Press anywhere to continue</string> 
 
    <string name="Text_ElderProfile_DeleteButton">Delete Elder</string>
    <string name="Text_EditElder_ElderName">Elder\'s Name</string>
    <string name="Text_EditElder_ElderDeviceId">Elder\'s Device ID</string>
    <string name="ButtonText_EditElder_SaveButton">Save</string>
    <string name="Label_PhotoGallery_Name">Name</string>
    <string name="Text_PhotoGallery_Name">Kenrick Anggara</string>
    <string name="Label_PhotoGallery_Remarks">Remarks</string>
    <string name="Text_PhotoGallery_Remarks">Remarks 1 2 3</string>
    <string name="Button_PhotoGallery_EditPhoto">Edit</string>
    <string name="Button_PhotoGallery_DeletePhoto">Delete</string>
    <string name="title_activity_elder_photo_gallery_edit_photo">ElderPhotoGalleryEditPhoto</string>
    <string name="Label_PhotoGallery_Edit_Photo_Name">Name</string>
    <string name="Label_PhotoGallery_EditPhoto_Remarks">Remarks</string>
    <string name="Button_PhotoGallery_EditPhoto_SaveButton">Save</string>
    <string name="Button_AddPhoto_Label">Add Photo</string>
    <string name="title_activity_elder_add_photo">ElderAddPhotoActivity</string>
    <string name="LabelText_AddPhoto_PhotoName">Name</string>
    <string name="LabelText_AddPhoto_PhotoRemarks">Remarks</string>
    <string name="Label_PhotoImage">Photo</string>
    <string name="ButtonText_PhotoImage">Select Image</string>
    <string name="AddPhotoButton_LabelText">Add Photo</string>
    <string name="Label_DeviceId">Device ID</string>
    <string name="ActionBar_AddPhoto_Text">Add Photo</string>

	<string name="Test">TestTets</string>

	
</resources>
