<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iderly.boundary.AddElderFormActivity" >
	
    <LinearLayout
        android:id="@+id/add_photo_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/LL_AddPhoto_PhotoName"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_photo_messages" >
        
        <EditText
            android:id="@+id/AddPhoto_PhotoName_Field"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/LabelText_AddPhoto_PhotoName"
            android:textColorHint="#333333" />
        
        <EditText
            android:id="@+id/AddPhoto_PhotoRemarks_Field"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/LabelText_AddPhoto_PhotoRemarks"
            android:textColorHint="#333333" />
        
        <LinearLayout
		    android:id="@+id/LL_ElderProfilePicture"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="15dp"
		    android:orientation="horizontal" >
		    
		    <TextView
		        android:id="@+id/LabelText_PhotoImage"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:text="@string/Label_PhotoImage" />
		    
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" >
		
		        <ImageView
		            android:id="@+id/ImageView_PhotoImage"
		            android:contentDescription="@string/ElderProfilePictureDescription"
		            android:layout_width="180dp"
		            android:layout_height="180dp"
		            android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp" />
		        
		        <Button
	                android:id="@+id/Button_PhotoImage"
	                android:layout_width="135dp"
	                android:layout_height="wrap_content"
	                android:onClick="onSelectImage"
	                android:padding="10dp"
	                android:layout_margin="4dp"
	                android:text="@string/ButtonText_PhotoImage"
	                android:layout_gravity="center_horizontal" />
			    
		    </LinearLayout>
		</LinearLayout>
        
        <Button
            android:id="@+id/AddElder_Btn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/AddPhotoButton_LabelText"
            android:onClick="addPhoto" />
        
    </LinearLayout>

</RelativeLayout>
