<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iderly.boundary.TitleActivity" >

	<ImageView
	    android:id="@+id/iDerly_logo"
	    android:layout_width="250dp"
	    android:layout_height="250dp"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:src="@+drawable/logo_iderly" />
	
	<Button
	    android:id="@+id/play_game_btn"
	    android:layout_width="200dp"
	    android:layout_height="100dp"
	    android:layout_below="@id/iDerly_logo"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="5dp"
	    android:onClick="startGameActivity"
	    android:text="@string/PlayGame_ButtonText" />
	
	<ToggleButton
	    android:id="@+id/game_mode_btn"
	    android:layout_width="200dp"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/play_game_btn"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="5dp"
	    android:textOff="@string/GameMode_Classic_ButtonText"
	    android:textOn="@string/GameMode_Unlimited_ButtonText" />

</RelativeLayout>
